<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/menuItemCliente"         android:icon="@android:drawable/btn_star_big_on" android:title="@string/label_cliente" />
    <item android:id="@+id/menuItemInstrutor"       android:icon="@android:drawable/btn_star_big_on" android:title="@string/label_instrutor" />
    <item android:id="@+id/menuItemLaboratorio"     android:icon="@android:drawable/btn_star_big_on" android:title="@string/label_laboratorio" />
    <item android:id="@+id/menuItemFrequencia"      android:icon="@android:drawable/btn_star_big_on" android:title="@string/label_frequencia" />
    <item android:id="@+id/menuItemStatusTurma"     android:icon="@android:drawable/btn_star_big_on" android:title="@string/label_status_turma" />
    <item android:id="@+id/menuItemStatusChamada"   android:icon="@android:drawable/btn_star_big_on" android:title="@string/label_status_chamada" />
    <item android:id="@+id/menuItemCurso"           android:icon="@android:drawable/btn_star_big_on" android:title="@string/label_curso" />
    <item android:id="@+id/menuItemTurno"           android:icon="@android:drawable/btn_star_big_on" android:title="@string/label_turno" />
    <item android:id="@+id/menuItemTurma"           android:icon="@android:drawable/btn_star_big_on" android:title="@string/label_turma" />
    <item android:id="@+id/menuItemMatricula"       android:icon="@android:drawable/btn_star_big_on" android:title="@string/label_matricula" />

</menu>