<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/label_inicio"
                android:id="@+id/inicioTurma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:hint="@string/label_curso"
            android:id="@+id/cursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/label_curso"
            />

        <Spinner
            android:hint="@string/label_instrutor"
            android:id="@+id/instrutores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Spinner
            android:hint="@string/label_laboratorio"
            android:id="@+id/laboratorios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Spinner
            android:hint="@string/label_frequencia"
            android:id="@+id/frequencias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Spinner
            android:hint="@string/label_status"
            android:id="@+id/statusTurma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Spinner
            android:hint="@string/label_turno"
            android:id="@+id/turnos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCancelarTurma"
                android:text="@string/label_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/btnSalvarTurma"
                android:text="@string/label_salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </LinearLayout>

</ScrollView>