<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/label_data"
                android:id="@+id/dataMatricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:hint="@string/label_cliente"
            android:id="@+id/clientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/label_cliente"
            />

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCancelarMatricula"
                android:text="@string/label_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/btnSalvarMatricula"
                android:text="@string/label_salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </LinearLayout>

</ScrollView>